--- a/css/styles.css
+++ b/css/styles.css
@@ -6,21 +6,22 @@ body {
     font-family: Inter, sans-serif;
     margin: 0;
 }
+
 .container {
     width: 1100px;
     margin: 0 auto;
 }
+
 /* header */
 .header {
-    background-image: linear-gradient(
-        to right,
-        rgba(43, 74, 97, 0.87),
-        rgba(43, 74, 97, 0.87)
-    ),
-    url(/pictures/header-background.jpg);
+    background-image: linear-gradient(to right,
+            rgba(43, 74, 97, 0.87),
+            rgba(43, 74, 97, 0.87)),
+        url(/pictures/background.jpg);
     border-bottom: 3px solid #FFF;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position-y: center;
 }
 
 .header-container {
@@ -62,3 +63,45 @@ body {
     border: 2px solid #26C7EA;
     background-color: #0B0E66;
 }
+
+/* main */
+/* hero */
+.hero {
+    background-image: url(/pictures/hero-background.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.hero-textbox {
+    display: flex;
+    flex-direction: column;
+    /* тимчасовий проміжок */
+    gap: 40px;
+    padding: 180px 0;
+}
+
+.hero-text {
+    flex-wrap: wrap;
+    width: 298px;
+    color: var(--white-color);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.2;
+}
+
+.hero-button {
+    width: 260px;
+    height: 80px;
+    margin-top: 42px;
+    color: #26C7EA;
+    font-family: HeadlandOne;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 1.25;
+    border-radius: 45px 0px;
+    border: 3px solid #26C7EA;
+    background: #0B0E66;
+}
+
+/* footer */
