--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,7 @@ body {
     background-image: url(/pictures/hero-background.webp);
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: #0B0E66;
 }
 
 .hero-textbox {
