--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 :root {
     --white-color: #fff;
+    --black-color: #000;
+    --dark-blue-text: #0A3853;
+    --light-black-text: #141414
 }
 
 body {
@@ -45,8 +48,8 @@ body {
     color: var(--white-color);
 }
 
-.header-link:hover,
-.header-link:focus {
+.header-link:focus,
+.header-link:hover {
     color: #94CFFF;
 }
 
@@ -103,6 +106,32 @@ body {
     border-radius: 45px 0px;
     border: 3px solid #26C7EA;
     background: #0B0E66;
+}
+
+/* quote */
+.first-quote {
+    padding-top: 75px;
+    /* тимчасовий паддінг */
+    padding-bottom: 138px;
+}
+.quote {
+    color: var(--dark-blue-text);
+    text-align: center;
+    font-family: Inter;
+    font-size: 36px;
+    text-transform: uppercase;
+    font-weight: 400;
+    line-height: 1.2;
+}
+
+.quote-name {
+    color: var(--black-color);
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 /* footer */
