--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,7 @@ body {
 
 .quote-name {
     color: var(--black-color);
+    margin-top: 16px;
     text-align: center;
     font-family: Inter;
     font-size: 24px;
