--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,7 @@ body {
     content: "";
     display: block;
     background-image: url(../pictures/arrow-left.webp);
-    background-position: center;
+    background-position-x: center;
     width: 152px;
     height: 40px;
 }
@@ -286,7 +286,7 @@ body {
     content: "";
     display: block;
     background-image: url(../pictures/quote-pic.webp);
-    background-position: center;
+    background-position-x: center;
     background-size: cover;
     width: 152px;
     height: 40px;
@@ -296,7 +296,7 @@ body {
     content: "";
     display: block;
     background-image: url(../pictures/arrow-right.webp);
-    background-position: center;
+    background-position-x: center;
     width: 152px;
     height: 40px;
 }
