--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,9 @@
     clip-path: inset(50%);
     margin: -1px;
 }
-
+html {
+    scroll-behavior: smooth;
+}
 body {
     font-family: Inter, sans-serif;
 }
@@ -87,7 +89,31 @@ body {
 .lang.inactive {
     color: #ccc;
 }
-
+/* to top button */
+.to-top {
+    background: white;
+    position: fixed;
+    bottom: 16px;
+    right:32px;
+    width:50px;
+    height:50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size:32px;
+    color:#1f1f1f;
+    text-decoration: none;
+    opacity:0;
+    pointer-events: none;
+    transition: all .4s;
+  }
+  
+  .to-top.active {
+    bottom:32px;
+    pointer-events: auto;
+    opacity:1;
+  }
 /* header */
 .header {
     background-image: linear-gradient(to right,
