--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,11 @@
     clip-path: inset(50%);
     margin: -1px;
 }
+
 html {
     scroll-behavior: smooth;
 }
+
 body {
     font-family: Inter, sans-serif;
 }
@@ -29,7 +31,7 @@ body {
     font-family: HeadlandOne;
     font-size: 24px;
     font-weight: 400;
-    line-height: 1.25;
+    line-height: 1.3;
     border-radius: 45px 0px;
     border: 3px solid #26C7EA;
     background: #0B0E66;
@@ -59,7 +61,7 @@ body {
 
 .toggle {
     width: 50px;
-    height: 24px;
+    height: 26px;
     background-color: transparent;
     border: 2px solid white;
     border-radius: 50px;
@@ -79,7 +81,7 @@ body {
 }
 
 .toggle.active .circle {
-    transform: translateX(26px);
+    transform: translateX(23px);
 }
 
 .lang.active {
@@ -89,31 +91,34 @@ body {
 .lang.inactive {
     color: #ccc;
 }
+
 /* to top button */
 .to-top {
     background: white;
     position: fixed;
     bottom: 16px;
-    right:32px;
-    width:50px;
-    height:50px;
+    right: 32px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
+    border: 1px solid var(--dark-blue-text);
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size:32px;
-    color:#1f1f1f;
+    font-size: 32px;
+    color: var(--dark-blue-text);
     text-decoration: none;
-    opacity:0;
+    opacity: 0;
     pointer-events: none;
     transition: all .4s;
-  }
-  
-  .to-top.active {
-    bottom:32px;
+}
+
+.to-top.active {
+    bottom: 32px;
     pointer-events: auto;
-    opacity:1;
-  }
+    opacity: 1;
+}
+
 /* header */
 .header {
     background-image: linear-gradient(to right,
@@ -124,6 +129,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: center;
+    padding: 39px 0;
 }
 
 .header-container {
@@ -133,13 +139,11 @@ body {
 
 .header-logo {
     width: 186px;
-    height: 72px;
+    height: 72px;  
     margin-right: 184px;
-    padding: 39px 0;
 }
 
 .header-list {
-    font-weight: 400;
     display: flex;
     gap: 38px;
 }
@@ -147,29 +151,30 @@ body {
 .header-link {
     color: var(--white-color);
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 300;
     line-height: 1.1;
 }
 
 .header-link:focus,
 .header-link:hover {
     color: #94CFFF;
+    font-size: 600;
 }
 
 .header-login {
-    margin-left: 228px;
+    margin-left: auto;
     color: #26C6EA;
     font-family: HeadlandOne;
     font-size: 20px;
     font-weight: 400;
-    line-height: 1.25;
+    line-height: 1.3;
     width: 141px;
-    height: 41.694px;
+    height: 42px;
     border-radius: 35px 0px;
-    border: 2px solid #26C7EA;
-    background-color: #0B0E66;
 }
-
+.header-login:hover {
+    box-shadow: 0 0 4px var(--black-color);
+}
 /* main */
 /* hero */
 .hero {
@@ -256,17 +261,23 @@ body {
     padding: 330px 0;
     background-image: url(../pictures/trailer-background.jpg);
     background-repeat: no-repeat;
-
     background-size: cover;
-
 }
 
 .trailer-button {
     display: block;
     margin: auto;
-    padding: 25px 18px;
+    width: 260px;
+    height: 80px;
+    color: #26C7EA;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 1.3;
+    cursor: pointer;
 }
-
+.trailer-button:hover {
+    box-shadow: 0 0 4px var(--black-color);
+}
 /* lang */
 .language {
     background-image: url(../pictures/lang-background.jpg);
