--- a/css/styles.css
+++ b/css/styles.css
@@ -35,8 +35,14 @@ body {
     border-radius: 45px 0px;
     border: 3px solid #26C7EA;
     background: #0B0E66;
+    cursor: pointer;
 }
-
+.button:hover {
+    box-shadow: 0 0 4px var(--black-color);
+    border-color: #0B0E66;
+    color: #0B0E66;
+    background-color: #26C7EA;
+}
 .container {
     width: 1100px;
     margin: 0 auto;
@@ -50,6 +56,7 @@ body {
     gap: 10px;
     font-family: Arial, sans-serif;
     color: white;
+    margin: 0 48px;
 }
 
 .lang {
@@ -83,7 +90,6 @@ body {
 .toggle.active .circle {
     transform: translateX(23px);
 }
-
 .lang.active {
     color: var(--white-color);
 }
@@ -129,12 +135,14 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: center;
+    display: flex;
     padding: 39px 0;
 }
 
 .header-container {
     display: flex;
     align-items: center;
+    margin-right: 0;
 }
 
 .header-logo {
@@ -172,9 +180,6 @@ body {
     height: 42px;
     border-radius: 35px 0px;
 }
-.header-login:hover {
-    box-shadow: 0 0 4px var(--black-color);
-}
 /* main */
 /* hero */
 .hero {
@@ -183,11 +188,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #0B0E66;
-}
-
-.hero-textbox {
-    display: flex;
-    flex-direction: column;
     padding: 180px 0;
 }
 
@@ -273,10 +273,6 @@ body {
     font-size: 24px;
     font-weight: 400;
     line-height: 1.3;
-    cursor: pointer;
-}
-.trailer-button:hover {
-    box-shadow: 0 0 4px var(--black-color);
 }
 /* lang */
 .language {
