--- a/css/styles.css
+++ b/css/styles.css
@@ -37,12 +37,14 @@ body {
     background: #0B0E66;
     cursor: pointer;
 }
+
 .button:hover {
     box-shadow: 0 0 4px var(--black-color);
     border-color: #0B0E66;
     color: #0B0E66;
     background-color: #26C7EA;
 }
+
 .container {
     width: 1100px;
     margin: 0 auto;
@@ -90,6 +92,7 @@ body {
 .toggle.active .circle {
     transform: translateX(23px);
 }
+
 .lang.active {
     color: var(--white-color);
 }
@@ -147,7 +150,7 @@ body {
 
 .header-logo {
     width: 186px;
-    height: 72px;  
+    height: 72px;
     margin-right: 184px;
 }
 
@@ -180,6 +183,7 @@ body {
     height: 42px;
     border-radius: 35px 0px;
 }
+
 /* main */
 /* hero */
 .hero {
@@ -203,7 +207,6 @@ body {
 
 .hero-text,
 .hero-text-navi {
-    flex-wrap: wrap;
     width: 298px;
     color: var(--white-color);
     font-family: Inter;
@@ -211,7 +214,6 @@ body {
     font-weight: 400;
     line-height: 1.2;
 }
-
 .hero-button {
     width: 260px;
     height: 80px;
@@ -274,6 +276,7 @@ body {
     font-weight: 400;
     line-height: 1.3;
 }
+
 /* lang */
 .language {
     background-image: url(../pictures/lang-background.jpg);
@@ -306,6 +309,20 @@ body {
     text-align: center;
 }
 
+.language-h {
+    color: var(--light-black-text);
+    font-family: HeadlandOne;
+    font-size: 24px;
+    line-height: 24px;
+}
+
+.language-navi {
+    color: var(--black-color);
+    font-family: HeadlandOne;
+    font-size: 24px;
+    line-height: 24px;
+}
+
 .arrow-left::after {
     content: "";
     display: block;
@@ -313,6 +330,7 @@ body {
     background-position-x: center;
     width: 152px;
     height: 40px;
+    margin: 40px auto;
 }
 
 .center::after {
@@ -320,9 +338,10 @@ body {
     display: block;
     background-image: url(../pictures/quote-pic.webp);
     background-position-x: center;
-    background-size: cover;
+    background-size: contain;
     width: 152px;
     height: 40px;
+    margin: 40px auto;
 }
 
 .arrow-right::after {
@@ -332,6 +351,7 @@ body {
     background-position-x: center;
     width: 152px;
     height: 40px;
+    margin: 40px auto;
 }
 
 .lang-header {
