--- a/css/styles.css
+++ b/css/styles.css
@@ -174,11 +174,8 @@ body {
 
 .header-login {
     margin-left: auto;
-    color: #26C6EA;
     font-family: HeadlandOne;
     font-size: 20px;
-    font-weight: 400;
-    line-height: 1.3;
     width: 141px;
     height: 42px;
     border-radius: 35px 0px;
@@ -207,7 +204,7 @@ body {
 
 .hero-text,
 .hero-text-navi {
-    width: 298px;
+    width: 347px;
     color: var(--white-color);
     font-family: Inter;
     font-size: 20px;
@@ -271,10 +268,8 @@ body {
     margin: auto;
     width: 260px;
     height: 80px;
-    color: #26C7EA;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 1.3;
+    text-align: center;
+    align-content: center;
 }
 
 /* lang */
@@ -327,7 +322,6 @@ body {
     content: "";
     display: block;
     background-image: url(../pictures/arrow-left.webp);
-    background-position-x: center;
     width: 152px;
     height: 40px;
     margin: 40px auto;
@@ -348,7 +342,6 @@ body {
     content: "";
     display: block;
     background-image: url(../pictures/arrow-right.webp);
-    background-position-x: center;
     width: 152px;
     height: 40px;
     margin: 40px auto;
